# chacha20-benches

./: .gitmodules  Cargo.toml  README.md  local_circom_bench.sh  local_noir_bench.sh  party1.env  party2.env  party3.env
data/circom/inputs/: input.json.0.shared  input.json.1.shared  input.json.2.shared
data/configs/: party1.toml  party2.toml  party3.toml
data/noir/inputs/: Prover.toml.0.shared  Prover.toml.1.shared  Prover.toml.2.shared
src/: config.rs  lib.rs
