[package]
name = "chacha20_benches"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
ark-bn254 = "0.5.0"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive", "env"] }
eyre = "0.6.12"
co-circom = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
circom-mpc-compiler = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
circom-mpc-vm = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
circom-types = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
co-circom-snarks = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
co-groth16 = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
mpc-core = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
mpc-net = { git = "https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
co-noir = { git="https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
co-builder = { git="https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
co-acvm = { git="https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }
ultrahonk = { git="https://github.com/TaceoLabs/co-snarks", rev = "8b81675" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.23.25"
